Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2532

examples are built, but not cleaned up

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • None
    • 4.2.0
    • Build
    • None

    Description

      In a regular build of ATS, the example plugins are being built, configured and installed, but not cleaned properly by make [dist]clean. The makefile is left back.

      $ configure ...
      ...
      config.status: creating example/Makefile
      config.status: creating iocore/Makefile
      config.status: creating iocore/aio/Makefile
      config.status: creating iocore/cache/Makefile
      config.status: creating iocore/cluster/Makefile
      config.status: creating iocore/dns/Makefile
      config.status: creating iocore/eventsystem/Makefile
      config.status: creating iocore/hostdb/Makefile
      config.status: creating iocore/net/Makefile
      config.status: creating iocore/utils/Makefile
      config.status: creating lib/Makefile
      config.status: creating lib/records/Makefile
      config.status: creating lib/ts/Makefile
      config.status: creating lib/ts/ink_config.h
      config.status: creating lib/tsconfig/Makefile
      config.status: creating lib/atscppapi/Makefile
      config.status: creating lib/atscppapi/src/Makefile
      config.status: creating lib/atscppapi/examples/Makefile
      config.status: creating lib/atscppapi/examples/helloworld/Makefile
      config.status: creating lib/atscppapi/examples/globalhook/Makefile
      config.status: creating lib/atscppapi/examples/transactionhook/Makefile
      config.status: creating lib/atscppapi/examples/multiple_transaction_hooks/Makefile
      config.status: creating lib/atscppapi/examples/clientrequest/Makefile
      config.status: creating lib/atscppapi/examples/data_caching/Makefile
      config.status: creating lib/atscppapi/examples/serverresponse/Makefile
      config.status: creating lib/atscppapi/examples/clientredirect/Makefile
      config.status: creating lib/atscppapi/examples/customresponse/Makefile
      config.status: creating lib/atscppapi/examples/null_transformation_plugin/Makefile
      config.status: creating lib/atscppapi/examples/post_buffer/Makefile
      config.status: creating lib/atscppapi/examples/logger_example/Makefile
      config.status: creating lib/atscppapi/examples/stat_example/Makefile
      config.status: creating lib/atscppapi/examples/async_http_fetch/Makefile
      config.status: creating lib/atscppapi/examples/remap_plugin/Makefile
      config.status: creating lib/atscppapi/examples/gzip_transformation/Makefile
      config.status: creating lib/atscppapi/examples/timeout_example/Makefile
      config.status: creating lib/atscppapi/examples/internal_transaction_handling/Makefile
      config.status: creating lib/atscppapi/examples/async_timer/Makefile
      ...
      Making all in example
      make[2]: Entering directory `/home/arno/trafficserver/trafficserver/example'
      make[3]: Entering directory `/home/arno/trafficserver/trafficserver'
      make[3]: Leaving directory `/home/arno/trafficserver/trafficserver'
      

      $ make distclean
      $ git status
      ...
      Untracked files:
      (use "git add <file>..." to include in what will be committed)
      ...
      lib/atscppapi/examples/Makefile
      lib/atscppapi/examples/async_http_fetch/.deps/
      lib/atscppapi/examples/async_http_fetch/Makefile
      lib/atscppapi/examples/async_timer/.deps/
      lib/atscppapi/examples/async_timer/Makefile
      lib/atscppapi/examples/clientredirect/.deps/
      lib/atscppapi/examples/clientredirect/Makefile
      lib/atscppapi/examples/clientrequest/.deps/
      lib/atscppapi/examples/clientrequest/Makefile
      lib/atscppapi/examples/customresponse/.deps/
      lib/atscppapi/examples/customresponse/Makefile
      lib/atscppapi/examples/data_caching/.deps/
      lib/atscppapi/examples/data_caching/Makefile
      lib/atscppapi/examples/globalhook/.deps/
      lib/atscppapi/examples/globalhook/Makefile
      lib/atscppapi/examples/gzip_transformation/.deps/
      lib/atscppapi/examples/gzip_transformation/Makefile
      lib/atscppapi/examples/helloworld/.deps/
      lib/atscppapi/examples/helloworld/Makefile
      lib/atscppapi/examples/internal_transaction_handling/.deps/
      lib/atscppapi/examples/internal_transaction_handling/Makefile
      lib/atscppapi/examples/logger_example/.deps/
      lib/atscppapi/examples/logger_example/Makefile
      lib/atscppapi/examples/multiple_transaction_hooks/.deps/
      lib/atscppapi/examples/multiple_transaction_hooks/Makefile
      lib/atscppapi/examples/null_transformation_plugin/.deps/
      lib/atscppapi/examples/null_transformation_plugin/Makefile
      lib/atscppapi/examples/post_buffer/.deps/
      lib/atscppapi/examples/post_buffer/Makefile
      lib/atscppapi/examples/remap_plugin/.deps/
      lib/atscppapi/examples/remap_plugin/Makefile
      lib/atscppapi/examples/serverresponse/.deps/
      lib/atscppapi/examples/serverresponse/Makefile
      lib/atscppapi/examples/stat_example/.deps/
      lib/atscppapi/examples/stat_example/Makefile
      lib/atscppapi/examples/timeout_example/.deps/
      lib/atscppapi/examples/timeout_example/Makefile
      lib/atscppapi/examples/transactionhook/.deps/
      lib/atscppapi/examples/transactionhook/Makefile

      
      

      Attachments

        Activity

          People

            jamespeach James Peach
            at Arno Toell
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: