TS-2532 Also make the examples compile cleanly