lib/atscppapi/examples/customresponse/CustomResponse.cc
@@ -78,5 +78,5 @@ public:
 };
 
 void TSPluginInit(int argc ATSCPPAPI_UNUSED, const char *argv[] ATSCPPAPI_UNUSED) {
-  GlobalPlugin *instance = new ClientRedirectGlobalPlugin();
+  new ClientRedirectGlobalPlugin();
 }
