lib/atscppapi/examples/multiple_transaction_hooks/MultipleTransactionHookPlugins.cc
@@ -96,5 +96,5 @@ public:
 };
 
 void TSPluginInit(int argc ATSCPPAPI_UNUSED, const char *argv[] ATSCPPAPI_UNUSED) {
-  atscppapi::GlobalPlugin *instance = new GlobalHookPlugin();
+  new GlobalHookPlugin();
 }
