lib/atscppapi/examples/post_buffer/PostBuffer.cc
@@ -70,6 +70,5 @@ public:
 };
 
 void TSPluginInit(int argc ATSCPPAPI_UNUSED, const char *argv[] ATSCPPAPI_UNUSED) {
-  GlobalPlugin *instance = new GlobalHookPlugin();
+  new GlobalHookPlugin();
 }
-
