lib/atscppapi/examples/serverresponse/ServerResponse.cc
@@ -106,5 +106,5 @@ private:
 };
 
 void TSPluginInit(int argc ATSCPPAPI_UNUSED, const char *argv[] ATSCPPAPI_UNUSED) {
-  GlobalPlugin *instance = new ServerResponsePlugin();
+  new ServerResponsePlugin();
 }
